--- a/haikugen/index.html
+++ b/haikugen/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
-<div style="float:left;">
+<div style="float:left;padding:1px;border:1px gray;">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/LetterH.svg/1200px-LetterH.svg.png" width=32px height=32px>
 </div>
